# imgshift

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_STATUS.md  PUBLISHING.md  README.md  commit_msg.txt  pyproject.toml  test_winding.py
src/imgshift/: __init__.py  cli.py  core.py  utils.py
src/imgshift/formats/: __init__.py  jpeg.py  pdf.py  png.py
src/imgshift/svg/: __init__.py  elements.py  geometry.py  paint.py  parser.py  path_parser.py  rasterizer.py  render.py  render_context.py  transforms.py
src/imgshift/svg/engines/: __init__.py  base.py  python_engine.py  resvg_engine.py
tests/: repro_svg_issue.py  test_comprehensive.py  test_conversions.py  test_edge_cases.py  test_path_parser.py  test_real_world.py  test_transforms.py
